# trajOptLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
docs/source/: conf.py  index.rst  modules.rst  trajOptLib.io.rst  trajOptLib.plot.rst  trajOptLib.rst
lib/TigerTools/: TigerEigen.h
lib/libf2c/: CMakeLists.txt  arith.h  f2c.h
lib/snopt7/cppsrc/: dummy.cc  snfilewrapper.c  snfilewrapper.f  snfilewrapper.hh  snopt.hh  snoptProblem.cc  snoptProblem.hh  snoptProblem.hh0  toyfunction.hh
lib/snopt7/csrc/: np02lib.c  npopt.c  sn02lib.c  sn03prnt.c  sn04wrap.c  sn05wrpa.c  sn05wrpb.c  sn05wrpc.c  sn05wrpn.c  sn10mach.c  sn12ampl.c  sn17util.c  sn20amat.c  sn25bfac.c  sn27lu77.c  sn30spec.c  sn35mps.c  sn37wrap.c  sn40bfil.c  sn50lp.c  sn55qp.c  sn56qncg.c  sn57qopt.c  sn60srch.c  sn65rmod.c  sn70nobj.c  sn80ncon.c  sn85hess.c  sn87sopt.c  sn90lmqn.c  sn95fmqn.c  snblas.c  snopta.c  snoptb.c  snoptc.c  snoptq.c  sq02lib.c  sqopt.c
lib/snopt7/win64/: f2c.h
lib/solver_interface/: CMakeLists.txt  README.md  __init__.py  pyipopt.py  pyoptsolver.py  pysnopt.py  setup.py  setup2.py  whatsnew.txt  wrapper.cpp
lib/solver_interface/common/: TigerEigen.h  functionBase.h  utils.h
lib/solver_interface/docs/source/: conf.py  index.rst  modules.rst  pyoptsolver.rst
lib/solver_interface/ipopt-interface/: CMakeLists.txt
lib/solver_interface/ipopt-interface/include/: ipoptWrapper.h
lib/solver_interface/ipopt-interface/src/: ipoptTest.cpp  ipoptWrapper.cpp
lib/solver_interface/pyoptsolver/: __init__.py  pyknitro.py  pyoptsolver.py  pysnopt.py
lib/solver_interface/pyoptsolver/src/: CMakeLists.txt  wrapper.cpp
lib/solver_interface/pyoptsolver/src/common/: TigerEigen.h  functionBase.h  utils.h
lib/solver_interface/pyoptsolver/src/ipopt-interface/include/: ipoptWrapper.h
lib/solver_interface/pyoptsolver/src/ipopt-interface/src/: ipoptWrapper.cpp  pybindWrapper.cpp
lib/solver_interface/pyoptsolver/src/snopt-interface/: ._CMakeLists.txt  CMakeLists.txt
lib/solver_interface/pyoptsolver/src/snopt-interface/include/: ._snoptWrapper.h  classStyle.h  funcStyle.h  snoptProblem.hh  snoptWrapper.h  toyfunction.h
lib/solver_interface/pyoptsolver/src/snopt-interface/pyscript/: ._pysnopt.py  ._setup.py  pysnopt.py  setup.py  snoptWrapper.py
lib/solver_interface/pyoptsolver/src/snopt-interface/pyscript/test/: README.md  testAutoGrad.py
lib/solver_interface/pyoptsolver/src/sqopt-interface/: CMakeLists.txt  README
lib/solver_interface/pyoptsolver/src/sqopt-interface/cppexamples/: hs118.cpp  hs118ez.cpp
lib/solver_interface/pyoptsolver/src/sqopt-interface/include/: sqopt.h  sqoptEZ.h  sqoptProblem.hpp  sqopt_cwrap.h  sqopt_wrapper.cpp
lib/solver_interface/pyoptsolver/src/sqopt-interface/src/: Submakefile  sqoptEZ.cpp  sqoptProblem.cpp  sqopt_wrapper.cpp
lib/solver_interface/snopt-interface/include/: classStyle.h  functionBase.h  snoptProblem.hh  snoptWrapper.h
lib/solver_interface/snopt-interface/pyscript/test/: ._testPlain.py  testClass.py  testPlain.py
lib/solver_interface/snopt-interface/src/: solverwrapper.cpp  toyfunction.cpp
lib/solver_interface/test/: test_all_on_qp.py  test_ipopt.py  test_knitro.py  test_snopt_history.py
test/: README.md  adtest.py  carCommon.py  cartpole.py  collocDemo.py  discrete_demo.py  quadDemo.py  simpleDemo.py  testMagicWrapper.py  testManifoldColloc.py  testManifoldFirstOrder.py  threePhasePlanarCar.py  twoPhaseDemo.py  utility.py
test/rotorWrapper/: CMakeLists.txt  README.md
test/rotorWrapper/src/: rotorWrapper.cpp
test/snoptTest/: testAutoGrad.py  testBind.py  testBind2.py  testClass.py  testPlain.py
test/trajOptCpp/: CMakeLists.txt
test/trajOptCpp/src/: solverwrapper.cpp
trajOptLib/: __init__.py  classBuilder.py  ipoptWrapper.py  oopInterface.py  snoptWrapper.py  systemBuilder.py  trajOptBase.py  trajOptCollocationProblem.py  trajOptManifoldCollocationProblem.py  trajOptMultiPhaseCollocationProblem.py  trajOptProblem.py  utility.py
trajOptLib/fakeio/: printio.py
trajOptLib/io/: __init__.py  argument.py  fileio.py  stringio.py
trajOptLib/plot/: __init__.py  plot3d.py
trajOptLib/snoptCpp/: CMakeLists.txt  README.md
trajOptLib/snoptCpp/include/: classStyle.h  funcStyle.h  functionBase.h  snoptWrapper.h
trajOptLib/snoptCpp/src/: funcStyle.cpp  snoptTest.cpp  solverwrapper.cpp  toyfunction.cpp
trajOptLib/snoptWrapper/: CMakeLists.txt
trajOptLib/snoptWrapper/Script/: snoptWrapper.py  testClass.py  testPlain.py
trajOptLib/snoptWrapper/include/: classStyle.h  funcStyle.h  snoptWrapper.h
trajOptLib/snoptWrapper/src/: classStyle.cpp  funcStyle.cpp  snoptTest.cpp  solverwrapper.cpp  toyfunction.cpp
trajOptLib/trajOpt/: CMakeLists.txt
trajOptLib/trajOpt/Script/: quadDemo.py  simpleDemo.py  testLaterInit.py  trajOptBase.py  trajOptProblem.py  trajOptWrapper.py  utility.py
trajoptlib/: __init__.py  classBuilder.py  legacy.py  systemBuilder.py  trajOptBase.py  trajOptCollocationProblem.py  trajOptDisProblem.py  trajOptManifoldCollocationProblem.py  trajOptMultiPhaseCollocationProblem.py  trajOptProblem.py  utility.py
trajoptlib/io/: __init__.py  argument.py
trajoptlib/plot/: README.md  common.py  compare.py
